--- a/notebooks/data_modeling.ipynb
+++ b/notebooks/data_modeling.ipynb
@@ -2768,6 +2768,617 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## CNSS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Año</th>\n",
+       "      <th>Meses</th>\n",
+       "      <th>Total afiliación</th>\n",
+       "      <th>Titulares</th>\n",
+       "      <th>Dependientes</th>\n",
+       "      <th>Dependientes Adicionales</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2007</td>\n",
+       "      <td>Septiembre</td>\n",
+       "      <td>1207959</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2007</td>\n",
+       "      <td>Octubre</td>\n",
+       "      <td>1534269</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2007</td>\n",
+       "      <td>Noviembre</td>\n",
+       "      <td>1443635</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2007</td>\n",
+       "      <td>Diciembre</td>\n",
+       "      <td>1599467</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2008</td>\n",
+       "      <td>Enero</td>\n",
+       "      <td>1467695</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Año         Meses   Total afiliación    Titulares   Dependientes   \\\n",
+       "0  2007   Septiembre              1207959            0              0   \n",
+       "1  2007      Octubre              1534269            0              0   \n",
+       "2  2007    Noviembre              1443635            0              0   \n",
+       "3  2007    Diciembre              1599467            0              0   \n",
+       "4  2008        Enero              1467695            0              0   \n",
+       "\n",
+       "     Dependientes Adicionales   \n",
+       "0                            0  \n",
+       "1                            0  \n",
+       "2                            0  \n",
+       "3                            0  \n",
+       "4                            0  "
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = pd.read_excel('../data/Raw Data/Excel-–-Regimen-Contributivo-Recaudos-y-Pagos-Seguro-Familiar-de-Salud-Seguros-Julio-2003-a-Noviembre-2024.xlsx')\n",
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Año</th>\n",
+       "      <th>Mes</th>\n",
+       "      <th>Aportes del Gobierno Central (RD$)</th>\n",
+       "      <th>Valor Pagado a SENASA (RD$)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2004</td>\n",
+       "      <td>Enero</td>\n",
+       "      <td>10000000.0</td>\n",
+       "      <td>1.308840e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2004</td>\n",
+       "      <td>Febrero</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2004</td>\n",
+       "      <td>Marzo</td>\n",
+       "      <td>27646666.0</td>\n",
+       "      <td>1.948879e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2004</td>\n",
+       "      <td>Abril</td>\n",
+       "      <td>13573333.0</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2004</td>\n",
+       "      <td>Mayo</td>\n",
+       "      <td>21761000.0</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Año      Mes  Aportes del Gobierno Central (RD$)  \\\n",
+       "0  2004    Enero                          10000000.0   \n",
+       "1  2004  Febrero                                 0.0   \n",
+       "2  2004    Marzo                          27646666.0   \n",
+       "3  2004    Abril                          13573333.0   \n",
+       "4  2004     Mayo                          21761000.0   \n",
+       "\n",
+       "   Valor Pagado a SENASA (RD$)  \n",
+       "0                 1.308840e+07  \n",
+       "1                 0.000000e+00  \n",
+       "2                 1.948879e+09  \n",
+       "3                 0.000000e+00  \n",
+       "4                 0.000000e+00  "
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data2 = pd.read_excel('../data/Raw Data/Excel-–-Regimen-Subsidiado-Aportes-Pagos-Seguro-Familiar-de-Salud-Enero-2004-octubre-2024-a-Noviembre-2024-1.xlsx', engine='openpyxl')\n",
+    "data2.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>total afiliación</th>\n",
+       "      <th>titulares</th>\n",
+       "      <th>dependientes</th>\n",
+       "      <th>dependientes adicionales</th>\n",
+       "      <th>fecha</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1207959</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2007  Septiembre</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1534269</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2007  Octubre</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1443635</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2007  Noviembre</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1599467</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2007  Diciembre</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1467695</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2008  Enero</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   total afiliación  titulares  dependientes  dependientes adicionales  \\\n",
+       "0           1207959          0             0                         0   \n",
+       "1           1534269          0             0                         0   \n",
+       "2           1443635          0             0                         0   \n",
+       "3           1599467          0             0                         0   \n",
+       "4           1467695          0             0                         0   \n",
+       "\n",
+       "               fecha  \n",
+       "0  2007  Septiembre   \n",
+       "1     2007  Octubre   \n",
+       "2   2007  Noviembre   \n",
+       "3   2007  Diciembre   \n",
+       "4       2008  Enero   "
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Standardizing columns names.\n",
+    "columns = ['mes' if column.lower().strip() == 'meses' else column.lower().strip() for column in data.columns]\n",
+    "# Updating the columns names.\n",
+    "data.columns = columns\n",
+    "# Creating a new column combining the year and month.\n",
+    "data['fecha'] = data['año'].astype('str') + ' ' + data['mes']\n",
+    "\n",
+    "# Dropping the month and year\n",
+    "data = data.iloc[:, 2:]\n",
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>aportes del gobierno central (rd$)</th>\n",
+       "      <th>valor pagado a senasa (rd$)</th>\n",
+       "      <th>fecha</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10000000.0</td>\n",
+       "      <td>1.308840e+07</td>\n",
+       "      <td>2004 Enero</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>2004 Febrero</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>27646666.0</td>\n",
+       "      <td>1.948879e+09</td>\n",
+       "      <td>2004 Marzo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>13573333.0</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>2004 Abril</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>21761000.0</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>2004 Mayo</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   aportes del gobierno central (rd$)  valor pagado a senasa (rd$)  \\\n",
+       "0                          10000000.0                 1.308840e+07   \n",
+       "1                                 0.0                 0.000000e+00   \n",
+       "2                          27646666.0                 1.948879e+09   \n",
+       "3                          13573333.0                 0.000000e+00   \n",
+       "4                          21761000.0                 0.000000e+00   \n",
+       "\n",
+       "          fecha  \n",
+       "0    2004 Enero  \n",
+       "1  2004 Febrero  \n",
+       "2    2004 Marzo  \n",
+       "3    2004 Abril  \n",
+       "4     2004 Mayo  "
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Standardizing columns names.\n",
+    "columns = ['mes' if column.lower().strip() == 'meses' else column.lower().strip() for column in data2.columns]\n",
+    "# Updating the columns names.\n",
+    "data2.columns = columns\n",
+    "# Creating a new column combining the year and month.\n",
+    "data2['fecha'] = data2['año'].astype('str') + ' ' + data2['mes']\n",
+    "# Dropping the month and year\n",
+    "data2 = data2.iloc[:, 2:]\n",
+    "data2.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>total afiliación</th>\n",
+       "      <th>titulares</th>\n",
+       "      <th>dependientes</th>\n",
+       "      <th>dependientes adicionales</th>\n",
+       "      <th>aportes del gobierno central (rd$)</th>\n",
+       "      <th>valor pagado a senasa (rd$)</th>\n",
+       "      <th>anio</th>\n",
+       "      <th>mes</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3476589</td>\n",
+       "      <td>1563494</td>\n",
+       "      <td>1733740</td>\n",
+       "      <td>179355</td>\n",
+       "      <td>669346479.0</td>\n",
+       "      <td>6.811959e+08</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>Enero</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3455629</td>\n",
+       "      <td>1562515</td>\n",
+       "      <td>1714575</td>\n",
+       "      <td>178539</td>\n",
+       "      <td>711711000.0</td>\n",
+       "      <td>6.807787e+08</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>Febrero</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3580871</td>\n",
+       "      <td>1619765</td>\n",
+       "      <td>1778698</td>\n",
+       "      <td>182408</td>\n",
+       "      <td>711711000.0</td>\n",
+       "      <td>6.718676e+08</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>Marzo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3560883</td>\n",
+       "      <td>1613308</td>\n",
+       "      <td>1765025</td>\n",
+       "      <td>182550</td>\n",
+       "      <td>711711000.0</td>\n",
+       "      <td>6.729397e+08</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>Abril</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3600238</td>\n",
+       "      <td>1622071</td>\n",
+       "      <td>1793644</td>\n",
+       "      <td>184523</td>\n",
+       "      <td>711711000.0</td>\n",
+       "      <td>6.774775e+08</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>Mayo</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   total afiliación  titulares  dependientes  dependientes adicionales  \\\n",
+       "0           3476589    1563494       1733740                    179355   \n",
+       "1           3455629    1562515       1714575                    178539   \n",
+       "2           3580871    1619765       1778698                    182408   \n",
+       "3           3560883    1613308       1765025                    182550   \n",
+       "4           3600238    1622071       1793644                    184523   \n",
+       "\n",
+       "   aportes del gobierno central (rd$)  valor pagado a senasa (rd$)  anio  \\\n",
+       "0                         669346479.0                 6.811959e+08  2016   \n",
+       "1                         711711000.0                 6.807787e+08  2016   \n",
+       "2                         711711000.0                 6.718676e+08  2016   \n",
+       "3                         711711000.0                 6.729397e+08  2016   \n",
+       "4                         711711000.0                 6.774775e+08  2016   \n",
+       "\n",
+       "       mes  \n",
+       "0    Enero  \n",
+       "1  Febrero  \n",
+       "2    Marzo  \n",
+       "3    Abril  \n",
+       "4     Mayo  "
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Merging datasets.\n",
+    "data3 = pd.merge(data, data2, on='fecha')\n",
+    "\n",
+    "# Splitting the date into year and month.\n",
+    "data3[['anio', 'mes']] = data3['fecha'].str.split(' ', expand=True, n=1)\n",
+    "\n",
+    "# Dropping \"date\" columns.\n",
+    "data3.drop('fecha', axis=1, inplace=True)\n",
+    "data3.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
