Puting brach up to date.

--- a/notebooks/data_modeling.ipynb
+++ b/notebooks/data_modeling.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -559,21 +559,21 @@
        "[16 rows x 27 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Reeding the data\n",
-    "capitas_pagadas = pd.read_excel('../data/Raw Data/afiliados-número-cápitas-cápitas-pagadas-sfs-según-régimen-2005-2023.xlsx', engine='openpyxl')\n",
+    "capitas_pagadas = pd.read_excel('../data/raw/one/afiliados-número-cápitas-cápitas-pagadas-sfs-según-régimen-2005-2023.xlsx', engine='openpyxl')\n",
     "\n",
     "capitas_pagadas"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1187,7 +1187,7 @@
        "25                                    1.018696  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1218,7 +1218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1801,7 +1801,7 @@
        "25                                   1.018696  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1819,14 +1819,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Harol Reyes\\AppData\\Local\\Temp\\ipykernel_7676\\2841815771.py:2: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "C:\\Users\\Harol Reyes\\AppData\\Local\\Temp\\ipykernel_26712\\2841815771.py:2: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
       "  capitas_pagadas.iloc[:, 0] = capitas_pagadas.iloc[:, 0].fillna(method='ffill')\n"
      ]
     }
@@ -1838,7 +1838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -2295,7 +2295,7 @@
        "25                                   1.018696  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2308,14 +2308,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Harol Reyes\\AppData\\Local\\Temp\\ipykernel_7676\\3847269345.py:2: SettingWithCopyWarning: \n",
+      "C:\\Users\\Harol Reyes\\AppData\\Local\\Temp\\ipykernel_26712\\3847269345.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -2756,7 +2756,7 @@
        "25                                   1.018696  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2776,7 +2776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -2874,19 +2874,19 @@
        "4                            0  "
       ]
      },
-     "execution_count": 97,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = pd.read_excel('../data/Raw Data/Excel-–-Regimen-Contributivo-Recaudos-y-Pagos-Seguro-Familiar-de-Salud-Seguros-Julio-2003-a-Noviembre-2024.xlsx')\n",
+    "data = pd.read_excel('../data/raw/cnss/Excel-–-Regimen-Contributivo-Recaudos-y-Pagos-Seguro-Familiar-de-Salud-Seguros-Julio-2003-a-Noviembre-2024.xlsx')\n",
     "data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -2972,19 +2972,19 @@
        "4                 0.000000e+00  "
       ]
      },
-     "execution_count": 98,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data2 = pd.read_excel('../data/Raw Data/Excel-–-Regimen-Subsidiado-Aportes-Pagos-Seguro-Familiar-de-Salud-Enero-2004-octubre-2024-a-Noviembre-2024-1.xlsx', engine='openpyxl')\n",
+    "data2 = pd.read_excel('../data/raw/cnss/Excel-–-Regimen-Subsidiado-Aportes-Pagos-Seguro-Familiar-de-Salud-Enero-2004-octubre-2024-a-Noviembre-2024-1.xlsx', engine='openpyxl')\n",
     "data2.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -3076,7 +3076,7 @@
        "4       2008  Enero   "
       ]
      },
-     "execution_count": 99,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3090,13 +3090,13 @@
     "data['fecha'] = data['año'].astype('str') + ' ' + data['mes']\n",
     "\n",
     "# Dropping the month and year\n",
-    "data = data.iloc[:, 2:]\n",
+    "data.drop(['año', 'mes'], axis=1, inplace=True)\n",
     "data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -3176,7 +3176,7 @@
        "4     2004 Mayo  "
       ]
      },
-     "execution_count": 100,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3195,7 +3195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -3312,7 +3312,7 @@
        "4     Mayo  "
       ]
      },
-     "execution_count": 102,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3330,60 +3330,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## ,"
+   ]
   }
  ],
  "metadata": {
