DOCT: Creating a doc string for the capitation_amt_per_cust_type function.

--- a/notebooks/charts.ipynb
+++ b/notebooks/charts.ipynb
@@ -3933,11 +3933,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def capitation_amt_per_cust_type(data: pd.DataFrame, years=[]) -> go.Figure:\n",
+    "    \"\"\"\n",
+    "        Generates a line plot of capitation amounts by customer type, filtered by year(s) and month.\n",
+    "\n",
+    "        The function visualizes the number of capitation disbursements for different customer types \n",
+    "        (total, titulares, direct dependents, and additional dependents) using a line chart. \n",
+    "        It filters the data based on the provided years, focusing on December by default. \n",
+    "        If only one year is selected, the data is shown by month.\n",
+    "\n",
+    "        Args:\n",
+    "            data (pd.DataFrame): Input DataFrame containing at least the following columns:\n",
+    "                - 'año': year of the record.\n",
+    "                - 'meses': month name in Spanish (e.g., 'enero', 'febrero', etc.).\n",
+    "                - Columns with capitation data (e.g., ' número de cápitas dispersadas(total)').\n",
+    "            years (list, optional): List of years to filter the data. Defaults to an empty list,\n",
+    "                which uses the most recent December.\n",
+    "\n",
+    "        Returns:\n",
+    "            go.Figure: A Plotly line chart object showing capitation trends by customer type.\n",
+    "\n",
+    "        Raises:\n",
+    "            ValueError: If `years` is not a list.\n",
+    "            ValueError: If provided years are not found in the dataset.\n",
+    "    \"\"\"\n",
     "    months = {\n",
     "        'enero': 1,\n",
     "        'febrero': 2,\n",
