FEAT: Modularized chart creation.
Created the cust_amt_per_capitation_type function which generates a line plot showing customer amounts based on capitation type over specified years.

--- a/notebooks/charts.ipynb
+++ b/notebooks/charts.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
        "18                                    1.018696  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,7 +489,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cust_amt_per_capitation_type(data: pd.DataFrame,filter_: str, years=[]):\n",
+    "    # Raising an error if years is not a list\n",
+    "    if type(years) is not list:\n",
+    "        raise ValueError('years must be a list.')\n",
+    "    \n",
+    "    # Raising an error if the years selected are not found.\n",
+    "    if not any(data['año'].isin(years)) and len(years) > 0:\n",
+    "        raise ValueError('years entered not found in the data.')\n",
+    "\n",
+    "    # Data filters.\n",
+    "    default_filter = ['afiliados (total)', 'afiliados (subsidiado)', 'afiliados (contributivo)']\n",
+    "    filters = {\n",
+    "        'subsidiado' : ['afiliados (subsidiado)'],\n",
+    "        'contributivo' : ['afiliados (contributivo)'],\n",
+    "    }\n",
+    "\n",
+    "    # Selecting the data that will be used as y axis.\n",
+    "    y_axis_data = filters.get(filter_, default_filter)\n",
+    "\n",
+    "    # Plotting the data.\n",
+    "    fig = px.line(\n",
+    "        data_frame = data,\n",
+    "        x = 'año',\n",
+    "        y = y_axis_data,\n",
+    "        markers=True\n",
+    "    )\n",
+    "\n",
+    "    return fig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1392,27 +1428,7 @@
     }
    ],
    "source": [
-    "filter_ = 'all'\n",
-    "\n",
-    "# Data filters.\n",
-    "default_filter = ['afiliados (total)', 'afiliados (subsidiado)', 'afiliados (contributivo)']\n",
-    "filters = {\n",
-    "    'subsidiado' : ['afiliados (subsidiado)'],\n",
-    "    'contributivo' : ['afiliados (contributivo)'],\n",
-    "}\n",
-    "\n",
-    "# Selecting the data that will be used as y axis.\n",
-    "y_axis_data = filters.get('', default_filter)\n",
-    "\n",
-    "# Plotting the data.\n",
-    "fig = px.line(\n",
-    "    data_frame = data,\n",
-    "    x = 'año',\n",
-    "    y = y_axis_data,\n",
-    "    markers=True\n",
-    ")\n",
-    "\n",
-    "fig.show()"
+    "cust_amt_per_capitation_type(data, '')"
    ]
   },
   {
