DOC: Created doc string for the cust_amt_per_capitation_type function.

--- a/notebooks/charts.ipynb
+++ b/notebooks/charts.ipynb
@@ -489,11 +489,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def cust_amt_per_capitation_type(data: pd.DataFrame,filter_: str, years=[]):\n",
+    "    \"\"\"\n",
+    "        Generates a line plot showing customer amounts based on capitation type over specified years.\n",
+    "\n",
+    "        Parameters\n",
+    "        data : pd.DataFrame\n",
+    "            A DataFrame containing at least the columns 'año', 'afiliados (total)', \n",
+    "            'afiliados (subsidiado)', and 'afiliados (contributivo)'.\n",
+    "        filter_ : str\n",
+    "            A string that determines which capitation type(s) to visualize.\n",
+    "            Acceptable values are:\n",
+    "                - 'subsidiado': plots only 'afiliados (subsidiado)'\n",
+    "                - 'contributivo': plots only 'afiliados (contributivo)'\n",
+    "                - Any other value defaults to plotting all three categories.\n",
+    "        years : list, optional\n",
+    "            A list of years (integers) to filter the data by. If the list is empty, all years are included.\n",
+    "\n",
+    "        Returns\n",
+    "        plotly.graph_objects.Figure\n",
+    "            A line plot figure object showing the selected data.\n",
+    "\n",
+    "        Raises\n",
+    "        ValueError\n",
+    "            If `years` is not a list.\n",
+    "        ValueError\n",
+    "            If the specified years are not present in the dataset.\n",
+    "    \"\"\"\n",
     "    # Raising an error if years is not a list\n",
     "    if type(years) is not list:\n",
     "        raise ValueError('years must be a list.')\n",
