FEAT: Modularized chart creation.
Created the amt_capitation_paid_per_cust_type function which generates a bar chart showing the number of capitation payments made per customer type over specified years.

--- a/notebooks/charts.ipynb
+++ b/notebooks/charts.ipynb
@@ -493,7 +493,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def cust_amt_per_capitation_type(data: pd.DataFrame,filter_: str, years=[]):\n",
+    "def cust_amt_per_capitation_type(data: pd.DataFrame, filter_: str, years=[]) -> go.Figure:\n",
     "    \"\"\"\n",
     "        Generates a line plot showing customer amounts based on capitation type over specified years.\n",
     "\n",
@@ -1459,7 +1459,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def amt_capitation_paid_per_cust_type(data: pd.DataFrame, filter_: str, years=[]) -> go.Figure:\n",
+    "    \"\"\"\n",
+    "    Generates a bar chart showing the number of capitation payments made per customer type over specified years.\n",
+    "\n",
+    "    Parameters\n",
+    "    data : pd.DataFrame\n",
+    "        A DataFrame containing at least the columns:\n",
+    "        'año', 'numero de cápitas pagadas (subsidiado)', and 'numero de cápitas pagadas (contributivo)'.\n",
+    "    filter_ : str\n",
+    "        A string indicating which customer type to filter by. Acceptable values are:\n",
+    "            - 'subsidiado': shows only 'numero de cápitas pagadas (subsidiado)'\n",
+    "            - 'contributivo': shows only 'numero de cápitas pagadas (contributivo)'\n",
+    "            - Any other value defaults to showing both.\n",
+    "    years : list, optional\n",
+    "        A list of years (integers) to filter the data by. If empty, all years in the dataset are used.\n",
+    "\n",
+    "    Returns\n",
+    "    plotly.graph_objects.Figure\n",
+    "        A bar chart figure object displaying the number of capitation payments per year.\n",
+    "\n",
+    "    Raises\n",
+    "    ValueError\n",
+    "        If `years` is not a list.\n",
+    "    ValueError\n",
+    "        If none of the specified years are found in the data.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # Raising an error if years is not a list\n",
+    "    if type(years) is not list:\n",
+    "        raise ValueError('years must be a list.')\n",
+    "    \n",
+    "    # Raising an error if the years selected are not found.\n",
+    "    if not any(data['año'].isin(years)) and len(years) > 0:\n",
+    "        raise ValueError('years entered not found in the data.')\n",
+    "    \n",
+    "    # Data filters.\n",
+    "    default_filter = ['numero de cápitas pagadas (subsidiado)', 'numero de cápitas pagadas (contributivo)']\n",
+    "    filters = {\n",
+    "        'subsidiado' : ['numero de cápitas pagadas (subsidiado)'],\n",
+    "        'contributivo' : ['numero de cápitas pagadas (contributivo)'],\n",
+    "    }\n",
+    "\n",
+    "    # Selecting the data that will be used as y axis.\n",
+    "    y_axis_data = filters.get(filter_, default_filter)\n",
+    "\n",
+    "    # Plotting the data.\n",
+    "    fig = px.bar(\n",
+    "        data,\n",
+    "        x='año',\n",
+    "        y= y_axis_data,\n",
+    "    )\n",
+    "\n",
+    "    return fig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -2335,24 +2396,8 @@
     }
    ],
    "source": [
-    "filter_ = 'all'\n",
     "\n",
-    "# Data filters.\n",
-    "default_filter = ['numero de cápitas pagadas (subsidiado)', 'numero de cápitas pagadas (contributivo)']\n",
-    "filters = {\n",
-    "    'subsidiado' : ['numero de cápitas pagadas (subsidiado)'],\n",
-    "    'contributivo' : ['numero de cápitas pagadas (contributivo)'],\n",
-    "}\n",
-    "\n",
-    "# Selecting the data that will be used as y axis.\n",
-    "y_axis_data = filters.get('', default_filter)\n",
-    "\n",
-    "# Plotting the data.\n",
-    "px.bar(\n",
-    "    data,\n",
-    "    x='año',\n",
-    "    y= y_axis_data,\n",
-    ")"
+    "amt_capitation_paid_per_cust_type(data, '')"
    ]
   },
   {
