FEAT: Modularized chart creation.
Created the amt_capitation_per_gender  function which generates a grouped bar chart showing the amount of capitation per gender over specified years..

--- a/notebooks/charts.ipynb
+++ b/notebooks/charts.ipynb
@@ -1465,29 +1465,29 @@
    "source": [
     "def amt_capitation_paid_per_cust_type(data: pd.DataFrame, filter_: str, years=[]) -> go.Figure:\n",
     "    \"\"\"\n",
-    "    Generates a bar chart showing the number of capitation payments made per customer type over specified years.\n",
+    "        Generates a bar chart showing the number of capitation payments made per customer type over specified years.\n",
     "\n",
-    "    Parameters\n",
-    "    data : pd.DataFrame\n",
-    "        A DataFrame containing at least the columns:\n",
-    "        'año', 'numero de cápitas pagadas (subsidiado)', and 'numero de cápitas pagadas (contributivo)'.\n",
-    "    filter_ : str\n",
-    "        A string indicating which customer type to filter by. Acceptable values are:\n",
-    "            - 'subsidiado': shows only 'numero de cápitas pagadas (subsidiado)'\n",
-    "            - 'contributivo': shows only 'numero de cápitas pagadas (contributivo)'\n",
-    "            - Any other value defaults to showing both.\n",
-    "    years : list, optional\n",
-    "        A list of years (integers) to filter the data by. If empty, all years in the dataset are used.\n",
+    "        Parameters\n",
+    "        data : pd.DataFrame\n",
+    "            A DataFrame containing at least the columns:\n",
+    "            'año', 'numero de cápitas pagadas (subsidiado)', and 'numero de cápitas pagadas (contributivo)'.\n",
+    "        filter_ : str\n",
+    "            A string indicating which customer type to filter by. Acceptable values are:\n",
+    "                - 'subsidiado': shows only 'numero de cápitas pagadas (subsidiado)'\n",
+    "                - 'contributivo': shows only 'numero de cápitas pagadas (contributivo)'\n",
+    "                - Any other value defaults to showing both.\n",
+    "        years : list, optional\n",
+    "            A list of years (integers) to filter the data by. If empty, all years in the dataset are used.\n",
     "\n",
-    "    Returns\n",
-    "    plotly.graph_objects.Figure\n",
-    "        A bar chart figure object displaying the number of capitation payments per year.\n",
+    "        Returns\n",
+    "        plotly.graph_objects.Figure\n",
+    "            A bar chart figure object displaying the number of capitation payments per year.\n",
     "\n",
-    "    Raises\n",
-    "    ValueError\n",
-    "        If `years` is not a list.\n",
-    "    ValueError\n",
-    "        If none of the specified years are found in the data.\n",
+    "        Raises\n",
+    "        ValueError\n",
+    "            If `years` is not a list.\n",
+    "        ValueError\n",
+    "            If none of the specified years are found in the data.\n",
     "    \"\"\"\n",
     "    \n",
     "    # Raising an error if years is not a list\n",
@@ -2409,7 +2409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -2767,7 +2767,7 @@
        "16                          2284920                          2292148  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2779,32 +2779,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['Unnamed: 0', 'año', 'total  (total )', 'total  (hombres)',\n",
-       "       'total  (mujeres)', 'régimen subsidiado (total )',\n",
-       "       'régimen subsidiado (hombres )', 'régimen subsidiado (mujeres )',\n",
-       "       'régimen contributivo (total )', 'régimen contributivo (hombres )',\n",
-       "       'régimen contributivo (mujeres )'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "data.columns"
+    "def amt_capitation_per_gender(data: pd.DataFrame, filter_: str, years=[]) -> go.Figure:\n",
+    "    \"\"\"\n",
+    "        Generates a grouped bar chart showing the amount of capitation per gender over specified years.\n",
+    "\n",
+    "        Parameters\n",
+    "        data : pd.DataFrame\n",
+    "            A DataFrame containing at least the columns:\n",
+    "            - 'año'\n",
+    "            - 'total  (hombres)', 'total  (mujeres)'\n",
+    "            - 'régimen subsidiado (hombres )', 'régimen subsidiado (mujeres )'\n",
+    "            - 'régimen contributivo (hombres )', 'régimen contributivo (mujeres )'\n",
+    "        filter_ : str\n",
+    "            A string that specifies the capitation type to filter by. Accepted values are:\n",
+    "                - 'subsidiado': plots only 'régimen subsidiado' by gender.\n",
+    "                - 'contributivo': plots only 'régimen contributivo' by gender.\n",
+    "                - Any other value defaults to plotting the total by gender.\n",
+    "        years : list, optional\n",
+    "            A list of years (integers) to filter the data. If empty, all years are included.\n",
+    "\n",
+    "        Returns\n",
+    "        go.Figure\n",
+    "            A Plotly grouped bar chart showing the amount of capitation per gender by year.\n",
+    "\n",
+    "        Raises\n",
+    "        ValueError\n",
+    "            If `years` is not a list.\n",
+    "        ValueError\n",
+    "            If the provided years are not found in the DataFrame.\n",
+    "    \"\"\"\n",
+    "    if type(years) is not list:\n",
+    "        raise ValueError('years must be a list.')\n",
+    "    \n",
+    "    # Raising an error if the years selected are not found.\n",
+    "    if not any(data['año'].isin(years)) and len(years) > 0:\n",
+    "        raise ValueError('years entered not found in the data.')\n",
+    "    \n",
+    "    # Data filters.\n",
+    "    default_filter = ['total  (hombres)', 'total  (mujeres)']\n",
+    "    filters = {\n",
+    "        'subsidiado' : ['régimen subsidiado (hombres )', 'régimen subsidiado (mujeres )'],\n",
+    "        'contributivo' : ['régimen contributivo (hombres )', 'régimen contributivo (mujeres )'],\n",
+    "    }\n",
+    "\n",
+    "    # Selecting the data that will be used as y axis.\n",
+    "    y_axis_data = filters.get(filter_, default_filter)\n",
+    "\n",
+    "    # Plotting the data.\n",
+    "    fig = px.bar(\n",
+    "        data,\n",
+    "        x='año',\n",
+    "        y=y_axis_data,\n",
+    "        barmode='group'\n",
+    "    )\n",
+    "\n",
+    "    return fig"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -3684,25 +3722,7 @@
     }
    ],
    "source": [
-    "filter_ = 'all'\n",
-    "\n",
-    "# Data filters.\n",
-    "default_filter = ['total  (hombres)', 'total  (mujeres)']\n",
-    "filters = {\n",
-    "    'subsidiado' : ['régimen subsidiado (hombres )', 'régimen subsidiado (mujeres )'],\n",
-    "    'contributivo' : ['régimen contributivo (hombres )', 'régimen contributivo (mujeres )'],\n",
-    "}\n",
-    "\n",
-    "# Selecting the data that will be used as y axis.\n",
-    "y_axis_data = filters.get('', default_filter)\n",
-    "\n",
-    "# Plotting the data.\n",
-    "px.bar(\n",
-    "    data,\n",
-    "    x='año',\n",
-    "    y=y_axis_data,\n",
-    "    barmode='group'\n",
-    ")"
+    "amt_capitation_per_gender(data, '')"
    ]
   },
   {
