--- a/notebooks/charts.ipynb
+++ b/notebooks/charts.ipynb
@@ -3734,7 +3734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -4027,7 +4027,7 @@
        "[144 rows x 10 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4040,7 +4040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4095,11 +4095,11 @@
     "    # Filtering the data by selected years if year is in the data.\n",
     "    if set(set(years)).issubset(data['año']) and len(years) > 0:\n",
     "        data = data.loc[data['año'].isin(years)]\n",
-    "        data = data.loc[data['meses'] == 'diciembre', :]\n",
+    "        data = data.loc[data['meses'].str.strip() == 'Diciembre', :]\n",
     "    \n",
     "    # Filtering by last period recorded in case that no year was selected.  \n",
     "    elif len(years) == 0:\n",
-    "        data = data.loc[data['meses'] == 'diciembre', :]\n",
+    "        data = data.loc[data['meses'].str.strip() == 'Diciembre', :]\n",
     "\n",
     "    # If only one year was selected, filtering the data by month.\n",
     "    if len(years) == 1:\n",
@@ -4135,7 +4135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
